fix: Fix an issue with tab indicator jumping

--- a/frontend/src/app/pages/project/tabs/home/home-tab.component.scss
+++ b/frontend/src/app/pages/project/tabs/home/home-tab.component.scss
@@ -1,6 +1,6 @@
 .home-tab-content {
   padding: 16px;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 81px);
   overflow-y: auto;
   display: flex;
   flex-direction: column;
